--- a/choose/scheter.html
+++ b/choose/scheter.html
@@ -24,7 +24,7 @@
             <a href="../scheter/c-8.html" class="button">c-8</a>
         </div>
         <div class="gitar-item" id="gitar2">
-            <img src="../IMg/C-8 Multiscale Silver Mountain.png" alt="" width="450" height="150">
+            <img src="../IMG/C-8 Multiscale Silver Mountain.png" alt="" width="450" height="150">
             <a href="../scheter/C-8 Multiscale Silver Mountain.html" class="button">C-8 Multiscale Silver Mountain </a>
         </div>
         <div class="gitar-item" id="gitar3">
