--- a/choose/scheter.html
+++ b/choose/scheter.html
@@ -20,7 +20,7 @@
     </div>
     <div class="gitar">
         <div class="gitar-item" id="gitar1">
-            <img src="../IMG/c-8.png" alt="" width="450" height="150">
+            <img src="../IMG/c-8.png" alt="" width="" height="">
             <a href="../scheter/c-8.html" class="button">c-8</a>
         </div>
         <div class="gitar-item" id="gitar2">
