--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <div class="background">
         <img src="./IMG/gtar7.jpg" alt="gambar" >
     </div>
+    <div class="as">
+        <a href="#">
+        <img src="./IMG/aboutus.png" alt="tes">
+        <p>ABOUT US</p>
+        </a>
+    </div>
     <div class="text">
         <h1>BESTGUITAR</h1>
         <p>CHOOSE YOUR OWN GEAR</p>
